# RLGYM-BOT

./: disreteActionParser.py  main.py  pyproject.toml  requirments.txt  rewards.py
UVSTUFF/: pyproject.toml
rlgym-ppo-run/1700650/: BOOK_KEEPING_VARS.json  PPO_VALUE_NET.pt
rlgym-ppo-run/1750656/: BOOK_KEEPING_VARS.json  PPO_VALUE_NET.pt
rlgym-ppo-run/1853302/: BOOK_KEEPING_VARS.json  PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET_OPTIMIZER.pt
rlgym-ppo-run/1955900/: BOOK_KEEPING_VARS.json  PPO_POLICY.pt  PPO_POLICY_OPTIMIZER.pt
rlgym-ppo-run/1958902/: PPO_POLICY_OPTIMIZER.pt  PPO_VALUE_NET.pt
wandb/offline-run-20260527_122127-bknrxkzo/files/: requirements.txt
wandb/run-20260524_213258-p82dybuv/files/: wandb-metadata.json
wandb/run-20260524_213357-la9yu5z8/: run-la9yu5z8.wandb
wandb/run-20260524_213357-la9yu5z8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260524_213623-la9yu5z8/: run-la9yu5z8.wandb
wandb/run-20260524_213623-la9yu5z8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260524_214227-la9yu5z8/: run-la9yu5z8.wandb
wandb/run-20260524_214227-la9yu5z8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260524_215734-la9yu5z8/: run-la9yu5z8.wandb
wandb/run-20260524_215734-la9yu5z8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260524_220225-la9yu5z8/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20260525_122310-la9yu5z8/: run-la9yu5z8.wandb
wandb/run-20260525_155834-la9yu5z8/: run-la9yu5z8.wandb
(+58 files in other folders)
